config-root/namespaces/jx-staging/test11/test11-test11-deploy.yaml
# Source: test11/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test11-test11
  labels:
    draft: draft-app
    chart: "test11-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'test11'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: test11-test11
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: test11-test11
    spec:
      serviceAccountName: test11-test11
      containers:
        - name: test11
          image: "763365863673.dkr.ecr.eu-central-1.amazonaws.com/ftl-faxiang/test11:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
